--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <h1>Kevin Weber</h1>
   <p>Hello and welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+ 
+ <h2> A list of everything </h2>
+  <ul> 
+   <li> Nuts </li>
+   <li> Chocolate </li>
+   <li> Chips </li>
 </body>
  
 </html>
